# retail-chain-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  mcp.Dockerfile  pyproject.toml  requirements.txt
data/: store_products.csv
src/: PictureAgent.py  retail_chain_mcp.py  store-product-chat.py  utilities.py
