[project]
name = "retail-chain-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles==23.2.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "audioop-lts==0.2.2",
    "certifi==2025.11.12",
    "click==8.3.1",
    "distro==1.9.0",
    "fastapi==0.128.0",
    "ffmpy==1.0.0",
    "filelock==3.20.1",
    "fsspec==2025.12.0",
    "gradio==5.16.0",
    "gradio-client==1.7.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.2.3",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "numpy==2.4.0",
    "openai==1.62.0",
    "orjson==3.11.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.21",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "ruff==0.14.10",
    "safehttpx==0.1.7",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "typer==0.21.0",
    "typer-slim==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uvicorn==0.40.0",
    "websockets==14.2",
]
